@@ -28,7 +28,7 @@ ExampleWindow::ExampleWindow()
   set_title("Gtk::FileSelection example");
 
   add(m_ButtonBox);
-  
+
   m_ButtonBox.pack_start(m_Button_File);
   m_Button_File.signal_clicked().connect( sigc::mem_fun(*this, &ExampleWindow::on_button_file_clicked) );
 
