@@ -90,17 +90,17 @@ public:
 
 /* List of user selectable filters
  */
-  _WRAP_METHOD(void add_filter(const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_add_filter)
-  _WRAP_METHOD(void remove_filter (const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_remove_filter)
+  _WRAP_METHOD(void add_filter(const FileFilter& filter), gtk_file_chooser_add_filter)
+  _WRAP_METHOD(void remove_filter (const FileFilter& filter), gtk_file_chooser_remove_filter)
 
-  _WRAP_METHOD(Glib::SListHandle< Glib::RefPtr<FileFilter> > list_filters(), gtk_file_chooser_list_filters)
-  _WRAP_METHOD(Glib::SListHandle< Glib::RefPtr<const FileFilter> > list_filters() const, gtk_file_chooser_list_filters)
+  _WRAP_METHOD(Glib::SListHandle< FileFilter* > list_filters(), gtk_file_chooser_list_filters)
+  _WRAP_METHOD(Glib::SListHandle< const FileFilter* > list_filters() const, gtk_file_chooser_list_filters)
   
 /* Current filter
  */
-  _WRAP_METHOD(void set_filter(const Glib::RefPtr<FileFilter>& filter), gtk_file_chooser_set_filter)
-  _WRAP_METHOD(Glib::RefPtr<FileFilter> get_filter(), gtk_file_chooser_get_filter, refreturn)
-  _WRAP_METHOD(Glib::RefPtr<const FileFilter> get_filter() const, gtk_file_chooser_get_filter, refreturn)
+  _WRAP_METHOD(void set_filter(const FileFilter& filter), gtk_file_chooser_set_filter)
+  _WRAP_METHOD(FileFilter* get_filter(), gtk_file_chooser_get_filter, refreturn)
+  _WRAP_METHOD(const FileFilter* get_filter() const, gtk_file_chooser_get_filter, refreturn)
   
 /* Per-application shortcut folders */
 
@@ -120,7 +120,7 @@ public:
 
   _WRAP_PROPERTY("action", FileChooserAction)
   //TODO: _WRAP_PROPERTY("file-system", FileSystem) //FileSystem is not really public API.
-  _WRAP_PROPERTY("filter", Glib::RefPtr<FileFilter>)
+  _WRAP_PROPERTY("filter", FileFilter*)
   _WRAP_PROPERTY("folder-mode", bool)
   _WRAP_PROPERTY("local-only", bool)
   _WRAP_PROPERTY("preview-widget", Widget*)
