@@ -19,6 +19,7 @@
  */
 
 #include <gtk/gtkfilefilter.h>
+#include <gtk/gtktypebuiltins.h> //For gtk_file_filter_flags_get_type().
 
 namespace
 {
