@@ -17,12 +17,10 @@
  * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  */
 
-#include <gtkmm/widget.h>
-#include <gtkmm/accelgroup.h>
-#include <gtkmm/stockid.h>
+#include <gtkmm/object.h>
 
 _DEFS(gtkmm,gtk)
-_PINCLUDE(glibmm/private/object_p.h)
+_PINCLUDE(gtkmm/private/object_p.h)
 
 //TODO: remove this if we wrap this in a C++ type:
 #ifndef DOXYGEN_SHOULD_SKIP_THIS
@@ -35,12 +33,11 @@ namespace Gtk
 
 _WRAP_ENUM(FileFilterFlags, GtkFileFilterFlags)
 
-class FileFilter : public Glib::Object
+class FileFilter : public Gtk::Object
 {
-  _CLASS_GOBJECT(FileFilter, GtkFileFilter, GTK_FILE_FILTER, Glib::Object, GObject)
-  _CTOR_DEFAULT
+  _CLASS_GTKOBJECT(FileFilter, GtkFileFilter, GTK_FILE_FILTER, Gtk::Object, GtkObject)
 public:
-  _WRAP_CREATE()
+ _CTOR_DEFAULT
 
   _WRAP_METHOD(void set_name(const Glib::ustring& name), gtk_file_filter_set_name)
   _WRAP_METHOD(Glib::ustring get_name() const, gtk_file_filter_get_name)
@@ -56,7 +53,7 @@ public:
 
   _WRAP_METHOD(FileFilterFlags get_needed() const, gtk_file_filter_get_needed)
 
-  //TODO: This method is used by FileChooser implentors, so we might not need to wrap it properly.
+  //TODO: This method is used by FileChooser implementors, so we might not need to wrap it properly.
   //GtkFileFilterInfo is not a registered GType. It has gchar* members but does not seem to take ownership of those strings.
   _WRAP_METHOD(bool filter(const GtkFileFilterInfo* filter_info), gtk_file_filter_filter)
 };
