@@ -1,3 +1,9 @@
+2004-03-25  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/filefilter.[hg|ccg]: Wrapped filefilter as a GtkObject 
+	instead of a GObject, because it is a GtkObject.
+	* examples/book/dialogs/filechooserdialog/: Used filefilter.
+
 2004-03-25  Bryan Forbes  <bryan@reigndropsfall.net>
 
 	* gtk/src/messagedialog.[hg|ccg]: removed use_separator parameter from
